--- a/image_captioning.ipynb
+++ b/image_captioning.ipynb
@@ -13430,8 +13430,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "25167e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from models import CNNEncoder\n",
+    "from predictor import Predictor\n",
+    "from utils import tokens_to_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "319de3d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn = CNNEncoder()\n",
+    "cnn.eval()\n",
+    "rnn = torch.load(\"model_decoder.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c97113b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = Predictor(cnn, rnn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0f1e457b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
+    "import torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2b929f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get(\"https://i.pinimg.com/564x/d6/a1/fd/d6a1fdbd79b80339d009aff691f49985.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "960856c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "593a0a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.open(BytesIO(res.content))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "510e775b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = torchvision.transforms.ToTensor()(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "98501894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = predictor.predict(img.unsqueeze(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "65fef1c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = tokens_to_words(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cb170f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a dog is laying down on a bed #END#'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe0e0b2e",
    "metadata": {},
    "outputs": [],
    "source": []
